--- a/app/views/animals/_animal_list.html.erb
+++ b/app/views/animals/_animal_list.html.erb
@@ -7,7 +7,7 @@
           <th class="header_th"><%= t('activerecord.attributes.animal.nickname') %></th>
           <th class="header_th"><%= t('activerecord.attributes.animal.surname') %></th>
           <th class="header_th"><%= t('activerecord.attributes.animal.gender') %></th>
-          <th class="header_th"><%= t('activerecord.attributes.animal.birth_year') %></th>
+          <th class="header_th"><%= t('label.Age') %></th>
           <th class="header_th"><%= sort_link(@q, :aviary, t('activerecord.attributes.animal.aviary')) %></th>
           <th class="header_th"><%= sort_link(@q, :aviary, t('activerecord.attributes.animal.arival_date')) %></th>
         </tr>
@@ -28,7 +28,7 @@
             <%= animal.gender %>
           </td>
             <td class="mi_tbody_td">
-              <%= animal.birth_year %>
+              <%= age(animal) %>
             </td>
             <td class="mi_tbody_td">
               <%= animal.aviary %>
