--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -3,6 +3,14 @@
     <h1><%= @animal.animal_type.name %></h1>
     <div class="lg:grid lg:justify-items-end">
       <%= link_to t('forms.buttons.edit'), edit_animal_path(@animal), class: "primary_button mb-2" %>
+      <div class="mt-2">
+          <%= link_to animal_path(@animal), data: { turbo_confirm: 'Are you sure?', turbo_method: :delete} do %>
+            <span class="tertiary_button">
+              <i class="fa fa-times" aria-hidden="true"></i>
+              <%= t('forms.buttons.delete') %>
+            </span>
+          <% end %>
+        </div>
       <%= link_to animals_path do %>
         <span class="tertiary_button">
           <i class="fa-solid fa-arrow-left" aria-hidden="true"></i>
