--- a/app/views/medical_procedures/_procedure_list.html.erb
+++ b/app/views/medical_procedures/_procedure_list.html.erb
@@ -30,7 +30,7 @@
               <% end %>
             </td>
             <td class="mi_tbody_td">
-              <%= link_to medical_procedure_path(medical_procedure), data: { turbo_confirm: 'Are you sure you want to delete this rover?', turbo_method: :delete}, aria: { label: "#{dom_id(medical_procedure)}_delete" }  do %>
+              <%= link_to medical_procedure_path(medical_procedure), data: { turbo_confirm: 'Are you sure you want to delete this record?', turbo_method: :delete}, aria: { label: "#{dom_id(medical_procedure)}_delete" }  do %>
                 <i class="fa fa-trash-can text-red-umred"></i>
               <% end %>
             </td>
