--- a/app/views/aviaries/_form.html.erb
+++ b/app/views/aviaries/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :sections %>
-    <%= form.checkbox :sections, class: "block mt-2 h-5 w-5" %>
+    <%= form.label :has_sections %>
+    <%= form.checkbox :has_sections, class: "block mt-2 h-5 w-5" %>
   </div>
 
   <div class="my-5">
