--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,7 @@
                 <div class="invisible absolute z-50 flex w-full flex-col bg-blue-umblue py-1 group-hover:visible" onClick="">
                   <%= link_to t('menu.header.types'), animal_types_path, class: "nav-sub-link" %>
                   <%= link_to t('menu.header.animals'), animals_path, class: "nav-sub-link" %>
+                  <%= link_to t('menu.header.aviaries'), aviaries_path, class: "nav-sub-link" %>
                 </div>
               </div>
               <div class="group relative cursor-pointer">
