--- a/app/views/aviaries/show.html.erb
+++ b/app/views/aviaries/show.html.erb
@@ -1,15 +1,27 @@
-<div class="mx-auto md:w-2/3 w-full flex">
-  <div class="mx-auto">
-    <% if notice.present? %>
-      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-    <% end %>
-
-    <%= render @aviary %>
-
-    <%= link_to "Edit this aviary", edit_aviary_path(@aviary), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to "Back to aviaries", aviaries_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this aviary", @aviary, method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+<div class="mx-auto w-full">
+  <div class="grid grid-cols-1 lg:grid-cols-2 items-center">
+    <h1><%= t('text.Aviary') %></h1>
+    <div class="lg:grid lg:justify-items-end">
+      <%= link_to t('forms.buttons.edit'), edit_aviary_path(@aviary), class: "primary_button mb-2" %>
+      <div class="mt-2">
+        <%= link_to aviary_path(@aviary), data: { turbo_confirm: 'Are you sure?', turbo_method: :delete} do %>
+          <span class="tertiary_button">
+            <i class="fa fa-times" aria-hidden="true"></i>
+            <%= t('forms.buttons.delete') %>
+          </span>
+        <% end %>
+      </div>
+      <%= link_to aviaries_path do %>
+        <span class="tertiary_button">
+          <i class="fa-solid fa-arrow-left" aria-hidden="true"></i>
+          <%= t('forms.buttons.back') %>
+        </span>
+      <% end %>
+    </div>
+  </div>
+  <div class="grid grid-cols-1 lg:grid-cols-2">
+    <div class="grid lg:col-span-2">
+      <%= render @aviary %>
     </div>
   </div>
 </div>
