add sections to aviaries

--- a/app/views/animals/_animal_list.html.erb
+++ b/app/views/animals/_animal_list.html.erb
@@ -31,7 +31,7 @@
               <%= age(animal) %>
             </td>
             <td class="mi_tbody_td">
-              <%= animal.aviary %>
+              <%= show_aviary(animal) %>
             </td>
             <td class="mi_tbody_td">
               <%= animal.arival_date %>
