--- a/app/views/aviaries/index.html.erb
+++ b/app/views/aviaries/index.html.erb
@@ -2,7 +2,7 @@
   <% content_for :title, "Aviaries" %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Aviaries</h1>
+    <h1 class="font-bold text-4xl"><%= t('text.Aviaries') %></h1>
     <%= link_to t('menu.new'), new_aviary_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
