--- a/app/views/animals/_animal.html.erb
+++ b/app/views/animals/_animal.html.erb
@@ -10,7 +10,6 @@
         </p>
       </div>
 
-
       <div class="py-2">
         <p class="body-lg-bold-text inline">
           <%= t('activerecord.attributes.animal.nickname') %>:
@@ -70,7 +69,7 @@
           <%= t('label.Birthday') %>:
         </p>
         <p class="body-lg-text pl-2 inline">
-          <%= animal.birth_year %>
+          <%= animal.birth_date %>
         </p>
       </div>
 
@@ -106,7 +105,7 @@
           <%= t('activerecord.attributes.animal.aviary') %>:
         </p>
         <p class="body-lg-text pl-2 inline">
-          <%= animal.aviary&.name %>
+          <%= show_aviary(animal) %>
         </p>
       </div>
 
