--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -24,4 +24,14 @@
       <%= render @animal %>
     </div>
   </div>
+
+  <div class="container p-2 rounded-lg shadow-lg text-xl mb-20 bg-gray-50">
+    <h2 class="mb-4">Notes:</h2>
+    <%= render partial: "notes/form", locals: { note: Note.new, noteable: @animal } %>
+
+    <%= turbo_stream_from @animal, :notes %>
+    <%= tag.div id: "#{dom_id(@animal)}_notes" do %>
+      <%= render @animal.notes %>
+    <% end %>
+  </div>
 </div>
