--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -11,20 +11,20 @@
           Updated on 
           <%=  show_date_time(note.updated_at) %>
           by
-          <%= note.user.display_name %>
+          <%= note.user.email_address %>
         </p>
-        <% if policy(note).edit? %>
-          <%= link_to edit_note_path(note) do %>
-            <span class="tertiary_button">Edit
-              <i class="fa-solid fa-pen"></i>
-            </span>
-          <% end %>
-          <%= link_to note_path(note), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } do %>
-            <span class="tertiary_button">Delete
-              <i class="fa fa-times" aria-hidden="true"></i>
-            </span>
-          <% end %>
+        
+        <%= link_to edit_note_path(note) do %>
+          <span class="tertiary_button">Edit
+            <i class="fa-solid fa-pen"></i>
+          </span>
         <% end %>
+        <%= link_to note_path(note), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } do %>
+          <span class="tertiary_button">Delete
+            <i class="fa fa-times" aria-hidden="true"></i>
+          </span>
+        <% end %>
+        
       </div>
     </div>
   </div>
