--- a/app/views/medical_procedures/_medical_procedure.html.erb
+++ b/app/views/medical_procedures/_medical_procedure.html.erb
@@ -16,6 +16,16 @@
         <%= medical_procedure.procedure_type.name %>
       </p>
     </div>
+
+    <div class="py-2">
+      <p class="body-lg-bold-text inline">
+        <%= t('activerecord.attributes.medical_procedure.description') %>:
+      </p>
+      <p class="body-lg-text pl-2 inline">
+        <%= medical_procedure.description %>
+      </p>
+    </div>
+
     <div class="py-2">
       <p class="body-lg-bold-text inline">
         <%= t('activerecord.attributes.medical_procedure.date_complete') %>:
