--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -27,7 +27,7 @@
 
     <div class="col-span-6 sm:flex sm:items-center sm:gap-4">
       <div class="inline">
-        <%= form.submit "Register", class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+        <%= form.submit "Register", class: "secondary_blue_button" %>
       </div>
 
       <div class="mt-4 text-sm text-gray-500 sm:mt-0">
