--- a/app/views/animals/_animal_medicine.html.erb
+++ b/app/views/animals/_animal_medicine.html.erb
@@ -2,7 +2,7 @@
 <%= turbo_frame_tag 'procedures' do %>
   <div class="min-w-full">
     <table class="mi_table" id="desk-table">
-      <thead class="border border-l-0 border-r-0 border-gray-um60">
+      <thead class="border border-l-0 border-r-0 border-gray-750">
         <tr>
           <th class="header_th">Название</th>
           <th class="header_th">Описание</th>
