--- a/app/views/aviaries/sections/_form.html.erb
+++ b/app/views/aviaries/sections/_form.html.erb
@@ -7,7 +7,7 @@
     </div>
   <% end %>
   <%= form.text_field :name %>
-  <%= form.submit class: "secondary_blue_button mt-2" %>
+  <%= form.submit class: "primary_button mt-2" %>
   <% if form.object.persisted? %>
     <%= link_to note do %>
       <span class="tertiary_button">Cancel
