--- a/app/views/medical_procedures/_form.html.erb
+++ b/app/views/medical_procedures/_form.html.erb
@@ -42,6 +42,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit t('forms.buttons.submit'), class: "secondary_blue_button" %>
+    <%= form.submit t('forms.buttons.submit'), class: "primary_button" %>
   </div>
 <% end %>
