--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="inline">
-      <%= form.submit "Save", class: "secondary_blue_button" %>
+      <%= form.submit "Save", class: "primary_button" %>
     </div>
   <% end %>
 </div>
