--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <div class="inline">
-      <%= form.submit "Email reset instructions", class: "secondary_blue_button" %>
+      <%= form.submit "Email reset instructions", class: "primary_button" %>
     </div>
   <% end %>
 </div>
