--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -27,11 +27,11 @@
 
     <div class="col-span-6 sm:flex sm:items-center sm:gap-4">
       <div class="inline">
-        <%= form.submit "Register", class: "secondary_blue_button" %>
+        <%= form.submit "Register", class: "primary_button" %>
       </div>
 
       <div class="mt-4 text-sm text-gray-500 sm:mt-0">
-        <%= link_to "Login", new_session_path, class: "text-gray-700 underline" %>
+        <%= link_to "Login", new_session_path, class: "link_to" %>
       </div>
     </div>
   <% end %>
