--- a/app/views/animal_types/_type_list.html.erb
+++ b/app/views/animal_types/_type_list.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tag 'animal_types' do %>
   <div class="min-w-full">
     <table class="mi_table" id="desk-table">
-      <thead class="border border-l-0 border-r-0 border-gray-um60">
+      <thead class="border border-l-0 border-r-0 border-gray-750">
         <tr>
           <th class="header_th"><%= t('activerecord.attributes.animal_type.name') %></th>
           <th class="header_th"><%= t('forms.buttons.edit') %></th>
@@ -16,12 +16,12 @@
             </td>
             <td class="mi_tbody_td">
               <%= link_to edit_animal_type_path(animal_type), data: { turbo_frame: "_top" }, aria: { label: "#{dom_id(animal_type)}_edit" } do%>
-                <i class="fa fa-pencil text-umgreen"></i>
+                <i class="fa fa-pencil text-950"></i>
               <% end %>
             </td>
             <td class="mi_tbody_td">
               <%= link_to animal_type_path(animal_type), data: { turbo_confirm: 'Are you sure you want to delete this rover?', turbo_method: :delete}, aria: { label: "#{dom_id(animal_type)}_delete" }  do %>
-                <i class="fa fa-trash-can text-red-umred"></i>
+                <i class="fa fa-trash-can text-red-950"></i>
               <% end %>
             </td>
           </tr>
