--- a/app/views/animal_types/index.html.erb
+++ b/app/views/animal_types/index.html.erb
@@ -4,7 +4,7 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Animal Types') %></h1>
-    <%= link_to t('menu.new'), new_animal_type_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to t('menu.new'), new_animal_type_path, class: "primary_button" %>
   </div>
 
   <div id="animal_types" class="min-w-full">
