--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -103,6 +103,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit t('forms.buttons.submit'), class: "secondary_blue_button" %>
+    <%= form.submit t('forms.buttons.submit'), class: "primary_button" %>
   </div>
 <% end %>
