--- a/app/views/aviaries/_form.html.erb
+++ b/app/views/aviaries/_form.html.erb
@@ -27,6 +27,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit class: "secondary_blue_button" %>
+    <%= form.submit class: "primary_button" %>
   </div>
 <% end %>
