--- a/app/views/aviaries/index.html.erb
+++ b/app/views/aviaries/index.html.erb
@@ -3,7 +3,7 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Aviaries') %></h1>
-    <%= link_to t('menu.new'), new_aviary_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to t('menu.new'), new_aviary_path, class: "primary_button" %>
   </div>
 
   <%= turbo_frame_tag "aviaries" do %>
