--- a/app/views/medical_procedures/index.html.erb
+++ b/app/views/medical_procedures/index.html.erb
@@ -4,7 +4,7 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Procedures') %></h1>
-    <%= link_to t('menu.new'), new_medical_procedure_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to t('menu.new'), new_medical_procedure_path, class: "primary_button" %>
   </div>
 
   <%= turbo_frame_tag "medical_procedures" do %>
