--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
   <%= form.rich_text_area :body %>
-  <%= form.submit class: "secondary_blue_button mt-2" %>
+  <%= form.submit class: "primary_button mt-2" %>
   <% if form.object.persisted? %>
     <%= link_to note do %>
       <span class="tertiary_button">Cancel
