--- a/app/views/pages/authentification.html.erb
+++ b/app/views/pages/authentification.html.erb
@@ -9,11 +9,11 @@
         <%= link_to "Sign Out", session_path, 
             method: :delete, 
             data: { turbo_method: :delete, confirm: "Are you sure?" }, 
-            class: "bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-md shadow-md transition duration-200" %>
+            class: "sign_button" %>
       <% else %>
         <p class="text-lg text-gray-800">Please sign in to access more features.</p>
         <%= link_to "Sign In", new_session_path, 
-            class: "bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-md shadow-md transition duration-200" %>
+            class: "primary_button" %>
       <% end %>
 
       <div class="mt-6 text-left">
@@ -31,7 +31,7 @@
               <%= link_to "Register New User", new_registration_path, class: "text-blue-600 hover:underline" %>
             </li>
             <li>
-              <%= link_to "Sign In", new_session_path, class: "text-blue-600 hover:underline" %>
+              <%= link_to "Sign In", new_session_path, class: "primary_button" %>
             </li>
           <% end %>
 
