--- a/app/views/procedure_types/_form.html.erb
+++ b/app/views/procedure_types/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit t('forms.buttons.submit'), class: "secondary_blue_button" %>
+    <%= form.submit t('forms.buttons.submit'), class: "primary_button" %>
   </div>
 <% end %>
