--- a/app/views/animals/_animal_list.html.erb
+++ b/app/views/animals/_animal_list.html.erb
@@ -9,8 +9,8 @@
           <th class="header_th"><%= t('activerecord.attributes.animal.surname') %></th>
           <th class="header_th"><%= t('activerecord.attributes.animal.gender') %></th>
           <th class="header_th"><%= t('label.Age') %></th>
-          <th class="header_th"><%= sort_link(@q, :aviary, t('activerecord.attributes.animal.aviary')) %></th>
-          <th class="header_th"><%= sort_link(@q, :aviary, t('activerecord.attributes.animal.arival_date')) %></th>
+          <th class="header_th"><%= sort_link(@q, :aviary_id, t('activerecord.attributes.animal.aviary')) %></th>
+          <th class="header_th"><%= sort_link(@q, :arival_date, t('activerecord.attributes.animal.arival_date')) %></th>
         </tr>
       </thead>
       <tbody>
