--- a/app/views/animals/_animal_list.html.erb
+++ b/app/views/animals/_animal_list.html.erb
@@ -1,48 +1,69 @@
 <%= turbo_frame_tag 'animals' do %>
   <div class="min-w-full">
-    <table class="mi_table" id="desk-table">
-      <thead class="border border-l-0 border-r-0 border-gray-750">
-        <tr>
-          <th class="header_th"><%= t('activerecord.attributes.animal.id') %></th>
-          <th class="header_th"><%= t('activerecord.attributes.animal.animal_type_id') %></th>
-          <th class="header_th"><%= t('activerecord.attributes.animal.nickname') %></th>
-          <th class="header_th"><%= t('activerecord.attributes.animal.surname') %></th>
-          <th class="header_th"><%= t('activerecord.attributes.animal.gender') %></th>
-          <th class="header_th"><%= t('label.Age') %></th>
-          <th class="header_th"><%= sort_link(@q, :aviary_id, t('activerecord.attributes.animal.aviary')) %></th>
-          <th class="header_th"><%= sort_link(@q, :arival_date, t('activerecord.attributes.animal.arival_date')) %></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @animals.each do |animal| %>
-          <rt>
-            <td class="mi_tbody_td">
-              <%= link_to animal.id, animal_path(animal), class: "link_to", data: {turbo_frame: "_top"} %>
+    <%= form_with url: cart_add_path, method: :post, 
+      data: { controller: "checkboxselectall",
+                target: "form",
+                action: "submit->checkboxselectall#submitForm",
+                turbo_frame: "_top" 
+              } do |form| %>
+      <div class="flex md:flex justify-between items-center ml-2 mb-2">
+        <div class="error_text" id="checkbox_error">
+        </div>
+        <div class>
+          <%= submit_tag 'Add to Card', class: "primary_button" %>
+        </div>
+      </div>
+      <table class="mi_table" id="desk-table">
+        <thead class="border border-l-0 border-r-0 border-gray-750">
+          <tr>
+            <td>
+              <span hidden id="select_all">Select All</span>
+              <input type="checkbox" aria-labelledby="select_all" class="check_box ml-2" data-checkboxselectall-target="checkbox_all" data-action="change->checkboxselectall#toggleCheckbox">
             </td>
-            <td class="mi_tbody_td">
-              <%= animal.animal_type.name %>
-            </td>
-            <td class="mi_tbody_td">
-              <%= link_to animal.nickname, animal_path(animal), class: "link_to", data: {turbo_frame: "_top"} %>
-            </td>
-            <td class="mi_tbody_td">
-              <%= animal.surname %>
-            </td>
-            <td class="mi_tbody_td">
-            <%= animal.gender %>
-          </td>
-            <td class="mi_tbody_td">
-              <%= age(animal) %>
-            </td>
-            <td class="mi_tbody_td">
-              <%= show_aviary(animal) %>
-            </td>
-            <td class="mi_tbody_td">
-              <%= animal.arival_date %>
-            </td>
+            <th class="header_th"><%= t('activerecord.attributes.animal.id') %></th>
+            <th class="header_th"><%= t('activerecord.attributes.animal.animal_type_id') %></th>
+            <th class="header_th"><%= t('activerecord.attributes.animal.nickname') %></th>
+            <th class="header_th"><%= t('activerecord.attributes.animal.surname') %></th>
+            <th class="header_th"><%= t('activerecord.attributes.animal.gender') %></th>
+            <th class="header_th"><%= t('label.Age') %></th>
+            <th class="header_th"><%= sort_link(@q, :aviary_id, t('activerecord.attributes.animal.aviary')) %></th>
+            <th class="header_th"><%= sort_link(@q, :arival_date, t('activerecord.attributes.animal.arival_date')) %></th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <% @animals.each do |animal| %>
+            <rt>
+              <td class="mi_tbody_td">
+                <input type="checkbox" aria-labelledby=<%= "animal_ids_#{animal.id}" %> name="animal_ids[<%= animal.id %>]" id="animal_ids_<%= animal.id %>" value="0" class="check_box" data-checkboxselectall-target="checkbox" data-action="change->checkboxselectall#toggleCheckboxAll">
+              </td>
+              <td class="mi_tbody_td">
+                <%= link_to animal.id, animal_path(animal), class: "link_to", data: {turbo_frame: "_top"} %>
+              </td>
+              <td class="mi_tbody_td">
+                <%= animal.animal_type.name %>
+              </td>
+              <td class="mi_tbody_td">
+                <%= link_to animal.nickname, animal_path(animal), class: "link_to", data: {turbo_frame: "_top"} %>
+              </td>
+              <td class="mi_tbody_td">
+                <%= animal.surname %>
+              </td>
+              <td class="mi_tbody_td">
+              <%= animal.gender %>
+            </td>
+              <td class="mi_tbody_td">
+                <%= age(animal) %>
+              </td>
+              <td class="mi_tbody_td">
+                <%= show_aviary(animal) %>
+              </td>
+              <td class="mi_tbody_td">
+                <%= animal.arival_date %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
   </div>
 <% end %>
