--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,6 +33,11 @@
                   <%= link_to t('menu.header.procedures'), medical_procedures_path, class: "nav-sub-link" %>
                 </div>
               </div>
+              <div class="flex items-center justify-between">
+                <div class="nav-top-link">
+                  <%= link_to t('menu.header.cart'), cart_path, class: "#{class_names(active: current_page?(cart_path))}" %>
+                </div>
+              </div>
               <div class="group relative cursor-pointer">
                 <div class="flex items-center justify-between">
                   <%= content_tag :span, t('menu.header.language'), class: "nav-top-link" %>
