--- a/app/views/cart/_cart.html.erb
+++ b/app/views/cart/_cart.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag "cart" do %>
   <h1>Cart</h1>
-  <% if @cart.cart_animals.count > 0 %>
+  <% if @cart && @cart&.cart_animals&.count > 0 %>
     <%= render "cart/cart_animals" %>
     <p>Total: <%= @cart.cart_animals.count %></p>
   <% else %>
