--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,6 +36,9 @@
               <div class="flex items-center justify-between">
                 <div class="nav-top-link">
                   <%= link_to t('menu.header.cart'), cart_path, class: "#{class_names(active: current_page?(cart_path))}" %>
+                  <%= turbo_frame_tag "cart_total" do %>
+                    <%= render 'cart/cart_total' %>
+                  <% end %>
                 </div>
               </div>
               <div class="group relative cursor-pointer">
