--- a/app/views/medical_procedures/_procedure_list.html.erb
+++ b/app/views/medical_procedures/_procedure_list.html.erb
@@ -3,7 +3,8 @@
     <table class="mi_table" id="desk-table">
       <thead class="border border-l-0 border-r-0 border-gray-750">
         <tr>
-          <th class="header_th"><%= t('activerecord.attributes.medical_procedure.animal_id') %> - <%= t('activerecord.attributes.medical_procedure.procedure_type_id') %></th>
+          <th class="header_th"><%= t('activerecord.attributes.medical_procedure.animal_id') %></th>
+          <th class="header_th"><%= t('activerecord.attributes.medical_procedure.procedure_type_id') %></th>
           <th class="header_th"><%= t('activerecord.attributes.medical_procedure.date_complete') %></th>
           <th class="header_th"><%= t('activerecord.attributes.medical_procedure.date_planned') %></th>
           <th class="header_th"><%= t('forms.buttons.edit') %></th>
@@ -14,8 +15,13 @@
         <% @medical_procedures.each do |medical_procedure| %>
           <rt>
             <td class="mi_tbody_td">
+              <%= link_to animal_path(medical_procedure), class: "link_to", data: {turbo_frame: "_top"} do %>
+                <%= show_animal(medical_procedure.animal) %>
+              <% end %>
+            </td>
+            <td class="mi_tbody_td">
               <%= link_to medical_procedure_path(medical_procedure), class: "link_to", data: {turbo_frame: "_top"} do %>
-                <%= show_animal(medical_procedure.animal) %> - <%= medical_procedure.procedure_type.name %>
+                <%= medical_procedure.procedure_type.name %>
               <% end %>
             </td>
             <td class="mi_tbody_td">
