--- a/app/views/medical_procedures/_procedure_list.html.erb
+++ b/app/views/medical_procedures/_procedure_list.html.erb
@@ -3,10 +3,10 @@
     <table class="mi_table" id="desk-table">
       <thead class="border border-l-0 border-r-0 border-gray-750">
         <tr>
-          <th class="header_th"><%= t('activerecord.attributes.medical_procedure.animal_id') %></th>
-          <th class="header_th"><%= t('activerecord.attributes.medical_procedure.procedure_type_id') %></th>
-          <th class="header_th"><%= t('activerecord.attributes.medical_procedure.date_complete') %></th>
-          <th class="header_th"><%= t('activerecord.attributes.medical_procedure.date_planned') %></th>
+          <th class="header_th"><%= sort_link(@q, :animal_id, t('activerecord.attributes.medical_procedure.animal_id')) %></th>
+          <th class="header_th"><%= sort_link(@q, :procedure_type_id, t('activerecord.attributes.medical_procedure.procedure_type_id')) %></th>
+          <th class="header_th"><%= sort_link(@q, :date_complete, t('activerecord.attributes.medical_procedure.date_complete')) %></th>
+          <th class="header_th"><%= sort_link(@q, :date_planned, t('activerecord.attributes.medical_procedure.date_planned')) %></th>
           <th class="header_th"><%= t('forms.buttons.edit') %></th>
           <th class="header_th"><%= t('forms.buttons.delete') %></th>
         </tr>
